<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.detailmovie.DetailMovieActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/default_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBackdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_100sdp"
                android:scaleType="center"
                android:alpha="0.5"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_100sdp"
                android:adjustViewBounds="true"
                android:background="@drawable/ic_no_image"
                android:scaleType="center"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/ivBackdrop"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@id/ivBackdrop"
                app:layout_constraintTop_toTopOf="@id/ivBackdrop" />

            <TextView
                android:id="@+id/tvReleaseStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/app_name"
                android:textStyle="bold"
                android:padding="4dp"
                android:background="@drawable/bg_round_8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="@id/ivBackdrop"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/ivPoster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="@id/tvTitle"/>

            <TextView
                android:id="@+id/tvPopularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
                app:layout_constraintStart_toStartOf="@id/tvTitle"/>

            <TextView
                android:id="@+id/tvVoteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintEnd_toEndOf="@id/tvTitle"/>

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/app_name"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@id/tvPopularity"
                app:layout_constraintStart_toStartOf="@id/tvTitle"/>

            <TextView
                android:id="@+id/tvTitleTrailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailer"
                android:layout_marginTop="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@id/tvOverview"
                app:layout_constraintStart_toStartOf="@id/tvOverview"/>

            <LinearLayout
                android:id="@+id/layoutListVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tvTitleTrailer"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tvNoVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/no_trailer"
                    android:textColor="@color/black"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTrailer"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:overScrollMode="never" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvTitleReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:layout_marginTop="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@id/layoutListVideo"
                app:layout_constraintStart_toStartOf="@id/tvOverview"/>

            <TextView
                android:id="@+id/tvSeeReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_rating"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintTop_toBottomOf="@id/tvTitleReview"
                app:layout_constraintStart_toStartOf="@id/tvTitleReview"
                android:drawablePadding="5dp"
                app:drawableEndCompat="@drawable/ic_arrow_forward_double" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>